--- a/index.html
+++ b/index.html
@@ -6,10 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin | Homepage</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 
 <body>
+    <header>
+        <div class="user">
+            <img src="/images/secretary.jpg" alt="Image of Secretary">
+            <p>Fonsah Pageo</p>
+        </div>
+        <div class="about">
+            <h2>About Me</h2>
+            <p>I'm a talented and passionate graphic designer with a background in architecture. I have a keen eye for
+                detail and a strong understanding of visual storytelling. I'm always looking for new projects to work on
+                and I'm eager to share my knowledge and experience with others.</p>
+            <div class="icons">
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+        </div>
+    </header>
 
+    <section>
+        <h3>My work</h3>
+        <div class="project">
+            <div class="screenshot">
+                <p>Screennshot of project</p>
+            </div>
+            <div class="details">
+                <h4>Project Title</h4>
+                <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="screenshot">
+                <p>Screennshot of project</p>
+            </div>
+            <div class="details">
+                <h4>Project Title</h4>
+                <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="screenshot">
+                <p>Screennshot of project</p>
+            </div>
+            <div class="details">
+                <h4>Project Title</h4>
+                <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="screenshot">
+                <p>Screennshot of project</p>
+            </div>
+            <div class="details">
+                <h4>Project Title</h4>
+                <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="screenshot">
+                <p>Screennshot of project</p>
+            </div>
+            <div class="details">
+                <h4>Project Title</h4>
+                <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="screenshot">
+                <p>Screennshot of project</p>
+            </div>
+            <div class="details">
+                <h4>Project Title</h4>
+                <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Contact me</p>
+        <p>Please get in touch if you think our work coulb be mutually beneficial.</p>
+        <p>1234 Random Road</p>
+        <p>Random ROad, Somewhere, 12345</p>
+        <p>&phone; 671-234-567</p>
+        <p>example@domain.com</p>
+        <div class="icons">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+        <img src="/images/secretary.jpg" alt="Image of Secretary">
+    </footer>
 </body>
 
 </html>
