--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="user">
             <img src="/images/secretary.jpg" alt="Image of Secretary">
-            <p>Fonsah Pageo</p>
+            <p>Amanda Waller</p>
         </div>
         <div class="about">
             <h2>About Me</h2>
@@ -28,8 +28,10 @@
         </div>
     </header>
 
+    <h3>My work</h3>
+
     <section>
-        <h3>My work</h3>
+
         <div class="project">
             <div class="screenshot">
                 <p>Screennshot of project</p>
@@ -87,10 +89,11 @@
     </section>
 
     <footer>
-        <p>Contact me</p>
-        <p>Please get in touch if you think our work coulb be mutually beneficial.</p>
-        <p>1234 Random Road</p>
-        <p>Random ROad, Somewhere, 12345</p>
+        <p>Contact me<br>
+        Please get in touch if you think our work coulb be mutually beneficial.</p>
+        <br>
+        <p>1234 Random Road<br
+        >Random ROad, Somewhere, 12345</p>
         <p>&phone; 671-234-567</p>
         <p>example@domain.com</p>
         <div class="icons">
