my simple dashboard for desktop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>I'm a talented and passionate graphic designer with a background in architecture. I have a keen eye for
                 detail and a strong understanding of visual storytelling. I'm always looking for new projects to work on
                 and I'm eager to share my knowledge and experience with others.</p>
-            <div class="icons">
+            <div class="icons right">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-brands fa-linkedin"></i>
                 <i class="fa-brands fa-twitter"></i>
@@ -33,73 +33,115 @@
     <section>
 
         <div class="project">
-            <div class="screenshot">
-                <p>Screennshot of project</p>
+            <div class="screenshot one">
+                <p>Screenshot of project</p>
             </div>
             <div class="details">
-                <h4>Project Title</h4>
+                <div class="title">
+                    <h4>Project Title</h4>
+                    <div class="icons">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
+                <p>Short description of the project. Just a couple sentences will do. </p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="screenshot two">
+                <p>Screenshot of project</p>
+            </div>
+            <div class="details">
+                <div class="title">
+                    <h4>Project Title</h4>
+                    <div class="icons">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
                 <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
         </div>
         <div class="project">
-            <div class="screenshot">
-                <p>Screennshot of project</p>
+            <div class="screenshot three">
+                <p>Screenshot of project</p>
             </div>
             <div class="details">
-                <h4>Project Title</h4>
+                <div class="title">
+                    <h4>Project Title</h4>
+                    <div class="icons">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
                 <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
         </div>
         <div class="project">
-            <div class="screenshot">
-                <p>Screennshot of project</p>
+            <div class="screenshot four">
+                <p>Screenshot of project</p>
             </div>
             <div class="details">
-                <h4>Project Title</h4>
+                <div class="title">
+                    <h4>Project Title</h4>
+                    <div class="icons">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
                 <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
         </div>
         <div class="project">
-            <div class="screenshot">
-                <p>Screennshot of project</p>
+            <div class="screenshot five">
+                <p>Screenshot of project</p>
             </div>
             <div class="details">
-                <h4>Project Title</h4>
+                <div class="title">
+                    <h4>Project Title</h4>
+                    <div class="icons">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
                 <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
         </div>
         <div class="project">
-            <div class="screenshot">
-                <p>Screennshot of project</p>
+            <div class="screenshot six">
+                <p>Screenshot of project</p>
             </div>
             <div class="details">
-                <h4>Project Title</h4>
-                <p>Short description of the project. Just a couple sentences will do.</p>
-            </div>
-        </div>
-        <div class="project">
-            <div class="screenshot">
-                <p>Screennshot of project</p>
-            </div>
-            <div class="details">
-                <h4>Project Title</h4>
+                <div class="title">
+                    <h4>Project Title</h4>
+                    <div class="icons">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
                 <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>Contact me<br>
-        Please get in touch if you think our work coulb be mutually beneficial.</p>
-        <br>
-        <p>1234 Random Road<br
-        >Random ROad, Somewhere, 12345</p>
-        <p>&phone; 671-234-567</p>
-        <p>example@domain.com</p>
-        <div class="icons">
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-twitter"></i>
+        <div class="info">
+            <p>Contact me<br>
+                Please get in touch if you think our work could be mutually beneficial.</p>
+            <p>1234 Random Road<br>Random Road, Somewhere, 12345</p>
+            <p>&phone; 671-234-567</p>
+            <p><i class="fa-solid fa-envelope"></i> example@domain.com</p>
+            <div class="icons">
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
         </div>
         <img src="/images/secretary.jpg" alt="Image of Secretary">
     </footer>
