improved desktop version

--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 <body>
     <header>
         <div class="user">
-            <img src="/images/secretary.jpg" alt="Image of Secretary">
-            <p>Amanda Waller</p>
+            <!-- <img src="/images/secretary.jpg" alt="Image of Secretary"> -->
+            Ashley Williams
         </div>
         <div class="about">
-            <h2>About Me</h2>
-            <p>I'm a talented and passionate graphic designer with a background in architecture. I have a keen eye for
-                detail and a strong understanding of visual storytelling. I'm always looking for new projects to work on
-                and I'm eager to share my knowledge and experience with others.</p>
-            <div class="icons right">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-twitter"></i>
+
+            <div>
+                <h2>About Me</h2>
+                <p>I'm a talented and passionate graphic designer with a background in architecture. I have a keen eye
+                    for
+                    detail and a strong understanding of visual storytelling. I'm always looking for new projects to
+                    work on
+                    and I'm eager to share my knowledge and experience with others.</p>
+                <div class="icons right">
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
             </div>
         </div>
     </header>
@@ -34,7 +39,7 @@
 
         <div class="project">
             <div class="screenshot one">
-                <p>Screenshot of project</p>
+                <!-- <p>Screenshot of project</p> -->
             </div>
             <div class="details">
                 <div class="title">
@@ -50,7 +55,7 @@
         </div>
         <div class="project">
             <div class="screenshot two">
-                <p>Screenshot of project</p>
+                <!-- <p>Screenshot of project</p> -->
             </div>
             <div class="details">
                 <div class="title">
@@ -66,7 +71,7 @@
         </div>
         <div class="project">
             <div class="screenshot three">
-                <p>Screenshot of project</p>
+                <!-- <p>Screenshot of project</p> -->
             </div>
             <div class="details">
                 <div class="title">
@@ -82,7 +87,7 @@
         </div>
         <div class="project">
             <div class="screenshot four">
-                <p>Screenshot of project</p>
+                <!-- <p>Screenshot of project</p> -->
             </div>
             <div class="details">
                 <div class="title">
@@ -98,7 +103,7 @@
         </div>
         <div class="project">
             <div class="screenshot five">
-                <p>Screenshot of project</p>
+                <!-- <p>Screenshot of project</p> -->
             </div>
             <div class="details">
                 <div class="title">
@@ -114,7 +119,7 @@
         </div>
         <div class="project">
             <div class="screenshot six">
-                <p>Screenshot of project</p>
+                <!-- <p>Screenshot of project</p> -->
             </div>
             <div class="details">
                 <div class="title">
